[gd_scene load_steps=4 format=3 uid="uid://ds8c1rlw6rdhm"]

[ext_resource type="Script" path="res://UI/Scenes/game_tutorial.gd" id="1_np2au"]
[ext_resource type="Texture2D" uid="uid://drj0fu2clbqhs" path="res://Images/UI/popup_bg.png" id="2_dohx7"]
[ext_resource type="Theme" path="res://Themes/notebook_text.tres" id="3_8f4yc"]

[node name="GameTutorial" type="Node2D"]
script = ExtResource("1_np2au")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_dohx7")

[node name="page_1" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RichTextLabel" type="RichTextLabel" parent="page_1"]
offset_left = 328.0
offset_top = 136.0
offset_right = 828.0
offset_bottom = 464.0
theme = ExtResource("3_8f4yc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Negative self-talk is any inner dialogue you have with yuorself that may be limiting your perception of your capabilities to complete a certain task, in this case having a conversation. While it may start as a realistic appraisal of your current ability, it can lead towards a downward spiral into a fear-based fantasy"
scroll_active = false
shortcut_keys_enabled = false

[node name="page_2" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="page_2"]
offset_left = 328.0
offset_top = 136.0
offset_right = 828.0
offset_bottom = 472.0
theme = ExtResource("3_8f4yc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Negative Self-Talk:
Different negative phrases will pop up on the screen. To get rid of them, click and drag your mouse over the phrase and drag it off the screen.

Repeat until all the phrases are gone."
scroll_active = false
shortcut_keys_enabled = false

[node name="TutorialButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 544.0
offset_top = 488.0
offset_right = 644.0
offset_bottom = 514.0

[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
